--- a/CEN-4010-Group-2-main/templates/courses.html
+++ b/CEN-4010-Group-2-main/templates/courses.html
@@ -125,7 +125,7 @@
 <body>
 
     <div class="sidebar">
-        <img src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="ServiceBase Logo">
+        <img id="logo" src="{{ url_for('static', filename='images/ServiceBase.png') }}" alt="ServiceBase">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('main.calendar_page') }}">Calendar</a>
         <a href="{{ url_for('main.uploaded_files') }}">Job Listings</a>
